--- a/src/App.css
+++ b/src/App.css
@@ -1,79 +1,92 @@
 .App {
-  text-align: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.pic{
-  width:200px;
-  height:40px;
+.pic {
+  width: 300px;
+  height: 80px;
 }
-.btn{
-  width:150px;
-  height:40px;
-  margin-bottom:20px;
-  background-color:rgb(163, 90, 90);
-  border:1px solid black;
-  color:white;
-}
-.question-container{
-  margin-bottom:30px;
+.btn {
+  width: 150px;
+  height: 40px;
+  margin: 1rem;
+  background-color: rgb(163, 64, 64);
+  color: white;
+  border: none;
+  border-radius: 0.2rem;
 }
 
-.survey-container{
-  margin-top:30px;
- align-items: center;
- display:flex;
- flex-direction:column;
+.drop-select {
+  border: none;
+  border-radius: 0.2rem;
+  height: 2rem;
+  width: 15rem;
+  font-weight: 400;
+  font-size: 1rem;
+  background-color: rgb(199, 198, 198);
 }
-.text{
-  width:200px;
-  height:30px auto;
+.question-container {
+  margin-bottom: 30px;
+}
+
+.survey-container {
+  margin-top: 30px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.text {
+  width: 200px;
+  height: 30px auto;
   font-weight: 600;
-  margin-top:20px;
-  color:black;
+  margin-top: 20px;
+  color: black;
   word-break: break-all;
 }
-li{
-  list-style-type:none;
+li {
+  list-style-type: none;
 }
-.text-center{
+.text-center {
   align-items: center;
-  display:flex;
-  flex-direction:column;
-  text-align:center;
-
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
-.btn-hide{
+.btn-hide {
   display: none;
 }
-.question-box{
-  width:400px;
-  height:30px;
+.question-box {
+  width: 400px;
+  height: 30px;
   font-weight: 600;
 }
-.survey-container1{
-  width:400px;
-  padding:5px;
+.survey-container1 {
+  width: 400px;
+  padding: 5px;
 }
-.answer{
-  width:425px;
-  display:flex;
+.answer {
+  width: 425px;
+  display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.answer input{
-  width:350px;
-  padding:5px;
-  height:20px;
+.answer input {
+  width: 350px;
+  padding: 5px;
+  height: 20px;
 }
-.answer p{
-  cursor:pointer;
+.answer p {
+  cursor: pointer;
 }
-.block-head{
+.block-head {
   align-items: center;
-  display:flex;
-  flex-direction:column;
+  display: flex;
+  flex-direction: column;
 }
-.block{
-  border:1px solid black;
-  width:350px;
-  height:400px auto;
+.block {
+  width: 350px;
+  height: 400px auto;
 }
